<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/listBackground">


    <Button
        android:id="@+id/castleCategoryBTN"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_drawable"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/castle_category_button_text"
        android:textColor="@color/buttonTextColor"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/rampartCategoryBTN"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/allCategoryBTN"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/rampartCategoryBTN"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_drawable"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/rampart_category_button_text"
        android:textColor="@color/buttonTextColor"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/dungeonCategoryBTN"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/castleCategoryBTN"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/dungeonCategoryBTN"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_drawable"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/dungeon_category_button_text"
        android:textColor="@color/buttonTextColor"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/favouriteCategoryBTN"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/rampartCategoryBTN"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/favouriteCategoryBTN"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_drawable"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/favourite_category_button_text"
        android:textColor="@color/buttonTextColor"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dungeonCategoryBTN"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/unitsRV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/allCategoryBTN"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_drawable"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/all_units_button"
        android:textColor="@color/buttonTextColor"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/castleCategoryBTN"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp" />


</androidx.constraintlayout.widget.ConstraintLayout>