<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/unitCV"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginLeft="12dp"
    android:layout_marginRight="12dp"
    android:clickable="true"
    app:cardCornerRadius="20dp"
    app:contentPadding="4dp"
    app:layout_constraintCircleRadius="20dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/unitCardLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/unitImageCV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            app:contentPadding="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/unitCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/unitIV"
                    android:layout_width="130dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/unit_image"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent"
                    card_view:layout_constraintVertical_bias="0.0"
                    card_view:srcCompat="@drawable/ic_launcher_background" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/categoryTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/unit_category"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/unitImageCV"
            app:layout_constraintTop_toBottomOf="@+id/titleTV" />

        <Button
            android:id="@+id/favoriteBTN"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_baseline_favorite_border_shadow_24"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.654" />

        <TextView
            android:id="@+id/titleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/unit_title"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/unitImageCV"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>